--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <title>3D Car Racer</title>
     <style>
-        :root {
-            color-scheme: dark;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
+        :root { color-scheme: dark; }
+        * { box-sizing: border-box; }
         body {
             margin: 0;
             overflow: hidden;
@@ -40,17 +34,8 @@
             border: 1px solid #1f2937;
         }
 
-        .menu-title {
-            margin: 0 0 4px;
-            font-size: 22px;
-            font-weight: 700;
-        }
-
-        .menu-subtitle {
-            margin: 0 0 16px;
-            font-size: 13px;
-            color: #9ca3af;
-        }
+        .menu-title { margin: 0 0 4px; font-size: 22px; font-weight: 700; }
+        .menu-subtitle { margin: 0 0 16px; font-size: 13px; color: #9ca3af; }
 
         .field-label {
             display: block;
@@ -115,9 +100,7 @@
             background: #15803d;
         }
 
-        .btn:active {
-            transform: scale(0.98);
-        }
+        .btn:active { transform: scale(0.98); }
 
         .menu-footer {
             margin-top: 10px;
@@ -141,22 +124,13 @@
             backdrop-filter: blur(10px);
         }
 
-        #hud div {
-            margin-bottom: 2px;
-        }
-
-        #hud div:last-child {
-            margin-bottom: 0;
-        }
-
-        #canvas-container {
-            position: fixed;
-            inset: 0;
-        }
+        #hud div { margin-bottom: 2px; }
+        #hud div:last-child { margin-bottom: 0; }
     </style>
 </head>
 <body>
 
+<!-- MENU -->
 <div id="menu">
     <div class="menu-panel">
         <h1 class="menu-title">3D Car Racer</h1>
@@ -175,8 +149,8 @@
         <label class="field-label" for="driverSelect">Driver style</label>
         <select id="driverSelect" class="field-select">
             <option value="balanced">Balanced • neutral</option>
-            <option value="aggressive">Aggressive • more oversteer</option>
-            <option value="smooth">Smooth • more grip</option>
+            <option value="aggressive">Aggressive • oversteer</option>
+            <option value="smooth">Smooth • high grip</option>
         </select>
 
         <div class="menu-buttons">
@@ -185,272 +159,217 @@
         </div>
 
         <p class="menu-footer">
-            Controls: W / S to accelerate & brake, A / D to steer. Multiplayer requires a WebSocket server (not wired yet).
+            Controls: W/S to accelerate & brake, A/D to steer. Multiplayer requires a WebSocket server (not wired yet).
         </p>
     </div>
 </div>
 
+<!-- HUD -->
 <div id="hud">
     <div id="hudName">Player: –</div>
     <div id="hudCar">Car: –</div>
     <div id="hudSpeed">Speed: 0</div>
 </div>
 
-<div id="canvas-container"></div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
 
 <script>
-window.addEventListener("load", () => {
-    // --------- DOM ELEMENTS ----------
-    const menu = document.getElementById("menu");
-    const hud = document.getElementById("hud");
-    const hudName = document.getElementById("hudName");
-    const hudCar = document.getElementById("hudCar");
-    const hudSpeed = document.getElementById("hudSpeed");
-    const playerNameInput = document.getElementById("playerName");
-    const carSelect = document.getElementById("carSelect");
-    const driverSelect = document.getElementById("driverSelect");
-    const startBtn = document.getElementById("startBtn");
-    const multiBtn = document.getElementById("multiBtn");
-    const canvasContainer = document.getElementById("canvas-container");
+// ------------ CONFIG & DOM ------------
+const menu = document.getElementById("menu");
+const hud = document.getElementById("hud");
+const hudName = document.getElementById("hudName");
+const hudCar = document.getElementById("hudCar");
+const hudSpeed = document.getElementById("hudSpeed");
 
-    const config = {
-        playerName: "Player",
-        carType: "sport",
-        driverType: "balanced"
-    };
+const playerNameInput = document.getElementById("playerName");
+const carSelect = document.getElementById("carSelect");
+const driverSelect = document.getElementById("driverSelect");
+const startBtn = document.getElementById("startBtn");
+const multiBtn = document.getElementById("multiBtn");
 
-    // --------- THREE.JS CORE ----------
-    let scene, camera, renderer, car;
-    let speed = 0;
-    const keys = {};
+const config = {
+    playerName: "Player",
+    carType: "sport",
+    driverType: "balanced"
+};
 
-    init3D();
-    initMenu();
-    animate();
+// ------------ THREE.JS SETUP ------------
+let scene, camera, renderer, car;
+let speed = 0;
+const keys = {};
 
-    function initMenu() {
-        startBtn.addEventListener("click", () => {
-            config.playerName = playerNameInput.value.trim() || "Player";
-            config.carType = carSelect.value;
-            config.driverType = driverSelect.value;
+function init3D() {
+    scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x020617);
 
-            startGame();
-        });
+    camera = new THREE.PerspectiveCamera(
+        60,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+    );
+    camera.position.set(0, 6, 12);
 
-        multiBtn.addEventListener("click", () => {
-            alert("Multiplayer is not connected yet.\nYou’ll need to plug in a WebSocket server later.");
-        });
+    renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+    document.body.appendChild(renderer.domElement);
+
+    const hemi = new THREE.HemisphereLight(0xffffff, 0x111827, 0.8);
+    scene.add(hemi);
+
+    const dir = new THREE.DirectionalLight(0xffffff, 1);
+    dir.position.set(15, 25, -10);
+    scene.add(dir);
+
+    const ground = new THREE.Mesh(
+        new THREE.PlaneGeometry(200, 200),
+        new THREE.MeshStandardMaterial({ color: 0x020617 })
+    );
+    ground.rotation.x = -Math.PI / 2;
+    scene.add(ground);
+
+    window.addEventListener("keydown", e => keys[e.code] = true);
+    window.addEventListener("keyup", e => keys[e.code] = false);
+    window.addEventListener("resize", onResize);
+}
+
+function createCarFromConfig() {
+    if (car) scene.remove(car);
+    car = new THREE.Group();
+
+    let bodyColor = 0xff4444;
+    let maxSpeed = 40;
+    let accel = 20;
+    let grip = 1;
+
+    if (config.carType === "sport") {
+        bodyColor = 0x22c55e;
+        maxSpeed = 55; accel = 22; grip = 0.9;
+    } else if (config.carType === "muscle") {
+        bodyColor = 0xf97316;
+        maxSpeed = 45; accel = 26; grip = 0.8;
+    } else if (config.carType === "kart") {
+        bodyColor = 0x3b82f6;
+        maxSpeed = 30; accel = 16; grip = 1.2;
     }
 
-    function init3D() {
-        scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x020617);
+    if (config.driverType === "aggressive") grip *= 0.8;
+    if (config.driverType === "smooth") grip *= 1.1;
 
-        camera = new THREE.PerspectiveCamera(
-            60,
-            window.innerWidth / window.innerHeight,
-            0.1,
-            1000
-        );
-        camera.position.set(0, 6, 12);
+    car.userData.maxSpeed = maxSpeed;
+    car.userData.accel = accel;
+    car.userData.grip = grip;
 
-        renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
-        canvasContainer.appendChild(renderer.domElement);
+    const bodyMat = new THREE.MeshStandardMaterial({
+        color: bodyColor,
+        roughness: 0.35,
+        metalness: 0.8
+    });
+    const bodyGeo = new THREE.BoxGeometry(2, 0.6, 4);
+    const body = new THREE.Mesh(bodyGeo, bodyMat);
+    body.position.y = 0.7;
+    car.add(body);
 
-        const hemi = new THREE.HemisphereLight(0xffffff, 0x111827, 0.8);
-        scene.add(hemi);
+    const wheelGeo = new THREE.CylinderGeometry(0.45, 0.45, 0.4, 20);
+    const wheelMat = new THREE.MeshStandardMaterial({ color: 0x111827 });
 
-        const dir = new THREE.DirectionalLight(0xffffff, 1);
-        dir.position.set(15, 25, -10);
-        dir.castShadow = true;
-        dir.shadow.mapSize.set(2048, 2048);
-        scene.add(dir);
-
-        const groundMat = new THREE.MeshStandardMaterial({
-            color: 0x020617,
-            roughness: 1,
-            metalness: 0
-        });
-        const ground = new THREE.Mesh(
-            new THREE.PlaneGeometry(500, 500),
-            groundMat
-        );
-        ground.rotation.x = -Math.PI / 2;
-        ground.receiveShadow = true;
-        scene.add(ground);
-
-        const lineMat = new THREE.LineBasicMaterial({ color: 0x4b5563 });
-        const lineGeo = new THREE.BufferGeometry().setFromPoints([
-            new THREE.Vector3(-25, 0.02, -25),
-            new THREE.Vector3(25, 0.02, -25),
-            new THREE.Vector3(25, 0.02, 25),
-            new THREE.Vector3(-25, 0.02, 25),
-            new THREE.Vector3(-25, 0.02, -25)
-        ]);
-        scene.add(new THREE.Line(lineGeo, lineMat));
-
-        window.addEventListener("keydown", e => keys[e.code] = true);
-        window.addEventListener("keyup", e => keys[e.code] = false);
-        window.addEventListener("resize", onResize);
+    function wheel(x, z) {
+        const w = new THREE.Mesh(wheelGeo, wheelMat);
+        w.rotation.z = Math.PI / 2;
+        w.position.set(x, 0.35, z);
+        return w;
     }
 
-    function createCarFromConfig() {
-        if (car) {
-            scene.remove(car);
-            car = null;
+    car.add(wheel(0.95, 1.4));
+    car.add(wheel(-0.95, 1.4));
+    car.add(wheel(0.95, -1.4));
+    car.add(wheel(-0.95, -1.4));
+
+    car.position.set(0, 0, 0);
+    scene.add(car);
+    speed = 0;
+}
+
+// ------------ GAME FLOW ------------
+function startGame() {
+    config.playerName = playerNameInput.value.trim() || "Player";
+    config.carType = carSelect.value;
+    config.driverType = driverSelect.value;
+
+    createCarFromConfig();
+
+    hudName.textContent = "Player: " + config.playerName;
+    hudCar.textContent = `Car: ${config.carType} (${config.driverType})`;
+    hud.style.display = "block";
+    menu.style.display = "none";
+}
+
+function updateCar() {
+    if (!car) return;
+
+    const accel = car.userData.accel || 20;
+    const maxSpeed = car.userData.maxSpeed || 40;
+    const grip = car.userData.grip || 1;
+
+    if (keys["KeyW"]) speed += accel * 0.02;
+    if (keys["KeyS"]) speed -= accel * 0.02;
+
+    speed = Math.max(Math.min(speed, maxSpeed), -maxSpeed);
+
+    if (!keys["KeyW"] && !keys["KeyS"]) {
+        if (speed > 0) {
+            speed -= 8 * 0.02;
+            if (speed < 0) speed = 0;
+        } else if (speed < 0) {
+            speed += 8 * 0.02;
+            if (speed > 0) speed = 0;
         }
-
-        car = new THREE.Group();
-
-        let bodyColor = 0xff4444;
-        let maxSpeed = 40;
-        let accel = 20;
-        let grip = 1;
-
-        if (config.carType === "sport") {
-            bodyColor = 0x22c55e;
-            maxSpeed = 55;
-            accel = 22;
-            grip = 0.9;
-        } else if (config.carType === "muscle") {
-            bodyColor = 0xf97316;
-            maxSpeed = 45;
-            accel = 26;
-            grip = 0.8;
-        } else if (config.carType === "kart") {
-            bodyColor = 0x3b82f6;
-            maxSpeed = 30;
-            accel = 16;
-            grip = 1.2;
-        }
-
-        if (config.driverType === "aggressive") {
-            grip *= 0.8;
-        } else if (config.driverType === "smooth") {
-            grip *= 1.1;
-        }
-
-        car.userData.maxSpeed = maxSpeed;
-        car.userData.accel = accel;
-        car.userData.grip = grip;
-
-        const bodyMat = new THREE.MeshStandardMaterial({
-            color: bodyColor,
-            roughness: 0.35,
-            metalness: 0.8
-        });
-        const bodyGeo = new THREE.BoxGeometry(2, 0.6, 4);
-        const body = new THREE.Mesh(bodyGeo, bodyMat);
-        body.position.y = 0.7;
-        body.castShadow = true;
-        car.add(body);
-
-        const cabinMat = new THREE.MeshStandardMaterial({
-            color: 0x111827,
-            roughness: 0.9,
-            metalness: 0.1
-        });
-        const cabinGeo = new THREE.BoxGeometry(1.4, 0.5, 1.6);
-        const cabin = new THREE.Mesh(cabinGeo, cabinMat);
-        cabin.position.set(0, 1.1, -0.3);
-        cabin.castShadow = true;
-        car.add(cabin);
-
-        const wheelGeo = new THREE.CylinderGeometry(0.45, 0.45, 0.4, 20);
-        const wheelMat = new THREE.MeshStandardMaterial({
-            color: 0x020617,
-            roughness: 0.8,
-            metalness: 0.2
-        });
-
-        function makeWheel(x, z) {
-            const w = new THREE.Mesh(wheelGeo, wheelMat);
-            w.rotation.z = Math.PI / 2;
-            w.position.set(x, 0.35, z);
-            w.castShadow = true;
-            return w;
-        }
-
-        car.add(makeWheel(0.95, 1.4));
-        car.add(makeWheel(-0.95, 1.4));
-        car.add(makeWheel(0.95, -1.4));
-        car.add(makeWheel(-0.95, -1.4));
-
-        car.position.set(0, 0, 0);
-        car.rotation.y = 0;
-
-        scene.add(car);
-        speed = 0;
     }
 
-    function startGame() {
-        createCarFromConfig();
+    let steerInput = 0;
+    if (keys["KeyA"]) steerInput += 1;
+    if (keys["KeyD"]) steerInput -= 1;
 
-        hudName.textContent = "Player: " + config.playerName;
-        hudCar.textContent = `Car: ${config.carType} (${config.driverType})`;
+    const steerFactor = (speed / maxSpeed) * grip;
+    car.rotation.y += steerInput * steerFactor * 0.05;
 
-        hud.style.display = "block";
-        menu.style.display = "none";
-    }
+    const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(car.quaternion);
+    car.position.addScaledVector(forward, speed * 0.02);
 
-    function updateCar() {
-        if (!car) return;
+    const camOffset = new THREE.Vector3(0, 6, 12).applyQuaternion(car.quaternion);
+    const targetPos = car.position.clone().add(camOffset);
+    camera.position.lerp(targetPos, 0.1);
+    camera.lookAt(car.position.clone().add(new THREE.Vector3(0, 1.2, 0)));
 
-        const accel = car.userData.accel || 20;
-        const maxSpeed = car.userData.maxSpeed || 40;
-        const grip = car.userData.grip || 1;
+    hudSpeed.textContent = "Speed: " + Math.round(speed);
+}
 
-        if (keys["KeyW"] || keys["ArrowUp"]) speed += accel * 0.02;
-        if (keys["KeyS"] || keys["ArrowDown"]) speed -= accel * 0.02;
+function animate() {
+    requestAnimationFrame(animate);
+    updateCar();
+    renderer.render(scene, camera);
+}
 
-        speed = Math.max(Math.min(speed, maxSpeed), -maxSpeed);
+function onResize() {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+}
 
-        if (!keys["KeyW"] && !keys["KeyS"] && !keys["ArrowUp"] && !keys["ArrowDown"]) {
-            if (speed > 0) {
-                speed -= 8 * 0.02;
-                if (speed < 0) speed = 0;
-            } else if (speed < 0) {
-                speed += 8 * 0.02;
-                if (speed > 0) speed = 0;
-            }
-        }
-
-        let steerInput = 0;
-        if (keys["KeyA"] || keys["ArrowLeft"]) steerInput += 1;
-        if (keys["KeyD"] || keys["ArrowRight"]) steerInput -= 1;
-
-        const steerFactor = (speed / maxSpeed) * grip;
-        car.rotation.y += steerInput * steerFactor * 0.05;
-
-        const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(car.quaternion);
-        car.position.addScaledVector(forward, speed * 0.02);
-
-        const camOffset = new THREE.Vector3(0, 6, 12).applyQuaternion(car.quaternion);
-        const desiredCamPos = car.position.clone().add(camOffset);
-        camera.position.lerp(desiredCamPos, 0.12);
-        camera.lookAt(car.position.clone().add(new THREE.Vector3(0, 1.2, 0)));
-
-        hudSpeed.textContent = "Speed: " + Math.round(speed);
-    }
-
-    function animate() {
-        requestAnimationFrame(animate);
-        updateCar();
-        renderer.render(scene, camera);
-    }
-
-    function onResize() {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-    }
-
-    // Multiplayer hooks would go here (WebSocket connection, syncing car.position/rotation, etc.)
+// ------------ EVENT WIRING ------------
+startBtn.addEventListener("click", () => {
+    console.log("Start button clicked"); // debug trace
+    startGame();
 });
+
+multiBtn.addEventListener("click", () => {
+    alert("Multiplayer not wired yet (needs WebSocket server).");
+});
+
+// INIT
+init3D();
+animate();
 </script>
 </body>
 </html>
